[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/scenes/start_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/custom_fonts/OpenSans-ExtraBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/controls/exit_btn.gd" type="Script" id=3]
[ext_resource path="res://src/controls/load_btn.gd" type="Script" id=4]
[ext_resource path="res://src/controls/start_btn.gd" type="Script" id=5]
[ext_resource path="res://src/controls/menu_items.gd" type="Script" id=6]
[ext_resource path="res://src/views/start_menu_view.gd" type="Script" id=7]
[ext_resource path="res://src/controls/start_lbl.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[node name="start_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_menu_view" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_items" type="VBoxContainer" parent="start_menu_view"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_lbl" type="Label" parent="start_menu_view/menu_items"]
margin_right = 40.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
script = ExtResource( 8 )

[node name="start_btn" type="Button" parent="start_menu_view/menu_items"]
margin_top = 59.0
margin_right = 40.0
margin_bottom = 79.0
script = ExtResource( 5 )

[node name="load_btn" type="Button" parent="start_menu_view/menu_items"]
margin_top = 83.0
margin_right = 40.0
margin_bottom = 103.0
script = ExtResource( 4 )

[node name="exit_btn" type="Button" parent="start_menu_view/menu_items"]
margin_top = 107.0
margin_right = 40.0
margin_bottom = 127.0
script = ExtResource( 3 )
